<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        style="@style/app_name"
        android:layout_margin="@dimen/zero"
        android:fontFamily="@font/karla"
        android:text="@string/late"
        android:textColor="@color/grey_900" />

    <TextView
        style="@style/search_text"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/transition_not_saved" />

    <CheckBox
        android:id="@+id/remind_me"
        style="@style/search_text"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/remind_me"
        android:textColor="@color/grey_900" />
</LinearLayout>