<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/coordinator_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/fragment_container"
        style="@style/matched"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:id="@+id/verification"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible">

        <RelativeLayout style="@style/matched">

            <TextView
                style="@style/app_name"
                android:text="@string/verification"
                android:textColor="@color/grey_900" />

            <ImageView
                style="@style/wrapped"
                android:layout_margin="@dimen/activity_margin"
                android:alertDialogCenterButtons="true"
                android:src="@drawable/more_vert" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/no_users_out"
            style="@style/wrapped"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    style="@style/wrapped"
                    android:src="@drawable/verification" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_displayed"
                style="@style/search_text"
                android:layout_below="@id/images"
                android:layout_centerHorizontal="true"
                android:text="@string/verification_needed"
                android:textAppearanceEasyCorrectSuggestion="4" />
        </RelativeLayout>

        <Button
            android:id="@+id/verify"
            style="@style/create_account_button"
            android:background="@drawable/verify"
            android:text="@string/verify" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>